Mobile mode (#23)
add mobility features